# DMX_ESP_V1

./: .cursorignore  .gitignore  CMakeLists.txt  IMPLEMENTED_FEATURES.md  ISSUES_PROGRESS.md  PR_SUMMARY.md  README.md  README_ISSUES.md  TEST_COVERAGE.md  partitions.csv  sdkconfig  sdkconfig.defaults
.github/issues/: 01-sacn-igmp-join.md  02-sacn-priority-merge.md  03-web-api-auth.md  04-add-tls.md  05-net-static-ip.md  06-dmx-apply-timing.md  07-fps-metrics.md  08-tests-ci.md  09-telemetry.md  (+1 more)
components/mod_web/: CMakeLists.txt  README.md
components/mod_web/include/: mod_web.h  mod_web_api.h  mod_web_auth.h  mod_web_error.h  mod_web_json.h  mod_web_routes.h  mod_web_server.h  mod_web_static.h  mod_web_validation.h  mod_web_ws.h
components/mod_web/src/: mod_web.c  mod_web_api.c  mod_web_auth.c  mod_web_error.c  mod_web_json.c  mod_web_routes.c  mod_web_server.c  mod_web_static.c  mod_web_validation.c  mod_web_ws.c
components/mod_web/test/unit_test/main/: test_web_api.c  test_web_auth.c
components/sys_mod/: CMakeLists.txt  sys_buffer.c  sys_config.c  sys_cpu.c  sys_mod.c  sys_mod.h  sys_mod_api.c  sys_nvs.c  sys_route.c  sys_setup.c  sys_snapshot.c
components/sys_mod/include/: dmx_types.h  sys_cpu.h  sys_event.h  sys_mod.h  sys_setup.h
components/sys_mod/src/: sys_cpu.c
components/sys_mod/test/unit_test/main/: CMakeLists.txt  test_sys_fps.c
frontend/: README.md  TESTING.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
main/: CMakeLists.txt  idf_component.yml  main.c  main.c.old
scripts/: create_issues_gh.sh
(+153 files in other folders)
